<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tsim</name>
  <version>0.0.0</version>
  <description>Simplest Turtlesim</description>
  <maintainer email="jungpil.yu@gmail.com">Jungpil YU</maintainer>
  <license>Apache license 2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>tsim_interfaces</exec_depend>
</package>
